# infer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  batched_infer_multi_prompts.cpp  compare_batching_methods.cpp  llama_infer.cpp
docker/: .dockerignore  Dockerfile  build.sh  docker-compose.yml  startup.sh
include/photon/arch/: config.hpp  llama_model.hpp  transformer_block.hpp
include/photon/core/: allocator.hpp  buffer.hpp  error.hpp  quant.hpp  tensor.hpp  thrust_allocator.hpp  types.hpp
include/photon/io/: checkpoint.hpp  model_loader.hpp  raw_model_data.hpp  tokenizer.hpp
include/photon/ops/: add.hpp  embedding.hpp  matmul.hpp  mha.hpp  operator.hpp  rmsnorm.hpp  rope.hpp  swiglu.hpp
include/photon/ops/kernels/: add_kernel.hpp  embedding_kernel.hpp  matmul_kernel.hpp  mha_kernel.hpp  rmsnorm_kernel.hpp  rope_kernel.hpp  swiglu_kernel.hpp
include/photon/ops/kernels/cuda/: add_kernel.cuh  embedding_kernel.cuh  matmul_dequant_cached.cuh  matmul_gemv_quant.cuh  mha_kernel.cuh  paged_attention.cuh  paged_kv_write.cuh  rmsnorm_kernel.cuh  rope_kernel.cuh  sampling_kernel.cuh  swiglu_kernel.cuh
include/photon/runtime/: block_manager.hpp  block_table.hpp  kv_cache_manager.hpp
include/photon/scheduler/: continuous_batch_engine.hpp  continuous_batch_scheduler.hpp  inference_request.hpp
src/: CMakeLists.txt
src/arch/: config.cpp  llama_model.cpp  transformer_block.cpp
src/core/: quant.cpp  tensor.cpp  thrust_allocator.cu
src/io/: checkpoint.cpp  model_loader.cpp  raw_model_data.cpp  tokenizer.cpp
src/ops/: add.cpp  embedding.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
src/ops/kernels/cuda/: add_kernel.cu  embedding_kernel.cu  matmul_dequant_cached.cu  matmul_gemv_quant.cu  mha_kernel.cu  paged_attention.cu  paged_kv_write.cu  rmsnorm_kernel.cu  rope_kernel.cu  sampling_kernel.cu  swiglu_kernel.cu
src/runtime/: block_manager.cpp  block_table.cpp  kv_cache_manager.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/core/: test_allocator.cpp  test_buffer.cpp  test_error.cpp  test_quant.cpp  test_tensor.cpp  test_thrust_allocator.cpp  test_types.cpp
tests/cuda/: CMakeLists.txt  test_cuda_ops.cpp
tests/model/: test_llama32_integration.cpp  test_llama_model.cpp  test_model_loader.cpp  test_tokenizer.cpp
tests/ops/: test_add.cpp  test_embedding.cpp  test_matmul.cpp  test_matmul_quant.cpp  test_mha.cpp  test_rmsnorm.cpp  test_rope.cpp  test_swiglu.cpp
web/: CMakeLists.txt  run_server.sh  web_server.cpp
web/static/: index.html
web/static/css/: style.css
web/static/js/: app.js
